Fixed some bugs Stupid AI not working